# mandelbrot

./: .gitignore  Cargo.toml  README.md  output  shader.wgsl  shader.wgsl.bak
shaders/: shader.wgsl
src/: main.rs  mandelbrot.rs
src/mandelbrot/: compute.rs  gpu.rs  mod.rs  shader.wgsl
