[package]
name    = "mandelbrot_set"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
sdl2     = "0.34"
rayon    = "1.5"
image    = "0.23"
wgpu     = "0.10"
bytemuck = "1.7"
pollster = "0.2"

[profile.dev]
# Builds with opt-level below 2 are lagging to much // Default is 0
opt-level = 2
